# app

./: .sesskey  README.md  dataretr.ipynb  estimation.ipynb  estimation.py  interface.py  plot.py  plots.py  pyproject.toml  pysparktuto.ipynb  simulations.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
src/a_btest/: dataretr.ipynb  estimation.ipynb  estimation.py  fastscrypt.py  interface-cis.py  interface.py  interfacebis.py  plots.py  simulations.py  test_estimation.py
src/a_btest/documentation/: HTMLDOC.md
src/a_btest/interface/: index.html  script.js  style.css  test.html  testdiff.html
