[project]
name = "a-btest"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "numpy>=2.0.1",
    "streamlit>=1.37.1",
    "matplotlib>=3.9.0",
    "pandas>=2.2.2",
    "scipy>=1.14.0",
    "plotly>=5.23.0",
    "seaborn>=0.13.2",
    "ipywidgets>=8.1.3",
    "black>=24.8.0",
    "python-fasthtml>=0.3.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/a_btest"]
